--- a/xpath.properties
+++ b/xpath.properties
@@ -3,7 +3,7 @@ Xpath=.//*[contains(@name,'btn')]
 xpath=//div[contains(text(),'login')]
 xpath=//*input[contains(@name,'Email')]
 xpath=//*[starts-with(@id,'Ema')]
-text xpath = //*[text()='New look for sign-in coming soon']
+xpath = //*[text()='New look for sign-in coming soon']
 xpath=findElement(By.xpath("(//input[@type='text'])[last()-1]"))
 Xpath=//*[@type='submit' OR @name='btnReset']
 Xpath=//input[@type='submit' AND @name='btnLogin']
